syntax = "proto3";

package connectrpc.health.v1;

enum HealthStatus {
  HEALTH_STATUS_UNSPECIFIED = 0;
  HEALTH_STATUS_HEALTHY = 1;
  HEALTH_STATUS_UNHEALTHY = 2;
}

message CheckHealthRequest {}

message CheckHealthResponse {
  HealthStatus status = 1;
  string message = 2;
}

service HealthService {
  rpc CheckHealth(CheckHealthRequest) returns (CheckHealthResponse);
}
